# cellcast

./: Cargo.toml  LICENSE-MIT  MODEL-LICENSES  README.md
.github/workflows/: ci.yml  release-pypi.yml
benches/: bench_stardist.rs
cellcast/: Cargo.toml
cellcast/src/: lib.rs
cellcast/src/geometry/: mod.rs  polygon.rs
cellcast/src/labeling/: mod.rs  polygon_label.rs
cellcast/src/models/: mod.rs  stardist_2d.rs  stardist_2d_versatile_fluo.rs
cellcast/src/networks/: mod.rs
cellcast/src/networks/cellpose/: cellpose_resnet.rs  mod.rs
cellcast/src/networks/stardist/: mod.rs  versatile_fluo_2d.rs
cellcast/src/process/: mod.rs  nms.rs
cellcast/src/utils/: axes.rs  border.rs  fetch.rs  mod.rs
cellcast/tests/: test_stardist.rs
cellcast_python/: Cargo.toml  README.md  pyproject.toml
cellcast_python/src/: error.rs  lib.rs  utils.rs
cellcast_python/src/child_modules/: models_module.rs
cellcast_python/src/functions/: stardist_functions.rs
crates/cellcast/: Cargo.toml  MODEL-LICENSES  README.md
crates/cellcast/src/: error.rs  lib.rs
crates/cellcast/src/config/: backend.rs  mod.rs  weights.rs
crates/cellcast/src/geometry/: mod.rs  polygon.rs  polyhedron.rs
crates/cellcast/src/labeling/: mod.rs  polygon_label.rs  polyhedron_label.rs
crates/cellcast/src/models/: mod.rs  stardist_2d.rs  stardist_2d_versatile_fluo.rs  stardist_3d.rs
crates/cellcast/src/networks/: mod.rs
crates/cellcast/src/networks/stardist/: demo_3d.rs  fluo_3d.rs  he_2d.rs  mod.rs  versatile_fluo_2d.rs  versatile_he_2d.rs
crates/cellcast/src/process/: mod.rs  nms.rs
crates/cellcast/src/utils/: border.rs  fetch.rs  mod.rs
crates/cellcast/tests/: test_stardist.rs
crates/cellcast_python/: Cargo.toml  README.md  pyproject.toml
crates/cellcast_python/src/: error.rs  lib.rs  parent_module.rs
crates/cellcast_python/src/child_modules/: mod.rs  models_module.rs
crates/cellcast_python/src/classes/: mod.rs  stardist_classes.rs
crates/cellcast_python/src/functions/: mod.rs  stardist_functions.rs
