[package]
name = "cellcast"
description = "A recast of cell segmentation models built on the Burn deep learning framework."
version = "0.1.1"
authors = ["cellcast developers"]
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/uw-loci/cellcast"
readme = "../README.md"
categories = ["algorithms","science"]

[lib]
name = "cellcast"
crate-type = ["rlib"]

[dependencies]
burn = { version = "0.19.1", features = ["tui", "train", "wgpu", "ndarray"], default-features = false}
burn-ndarray = "0.19.1"
geo = "0.32"
imgal = { path = "../../../imgal-sc/imgal/imgal" }
ndarray = "0.17.1"
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["blocking"]}
