[package]
name = "cellcast_python"
version = "0.1.0"
authors = ["cellcast developers"]
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/uw-loci/cellcast"
readme = "README.md"

[lib]
name = "cellcast"
crate-type = ["cdylib"]
doc = false

[dependencies]
cellcast = { path = "../cellcast" }
imgal = "0.2.0"
pyo3 = { version = "0.27.2", features = ["extension-module"]}
numpy = "0.27.1"
