[package]
name = "cellcast_python"
version = "0.1.0"
authors = ["cellcast developers"]
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/uw-loci/cellcast"
readme = "README.md"

[lib]
name = "cellcast"
crate-type = ["cdylib"]
doc = false

[dependencies]
cellcast = { path = "../cellcast" }
imgal = { path = "../../../imgal-sc/imgal/imgal" }
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py37"] }
numpy = "0.27.1"
