[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[project]
name = "cellcast"
version = "0.1.0.dev0"
description = "A recast of cell segmentation models built on the Burn deep learning framework."
authors = [{ name = "cellcast developers" }]
license = {text = "Unlicense OR MIT"}
readme = "README.md"
keywords = ["image-processing", "algorithm", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]

requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[dependency-groups]
# Development tools
dev = [
    "maturin",
]
