[package]
name = "cellcast"
description = "A recast of cell segmentation models built on the Burn deep learning framework."
version = "0.2.1"
authors = ["cellcast developers"]
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/uw-loci/cellcast"
readme = "README.md"
categories = ["algorithms","science"]

[lib]
name = "cellcast"
crate-type = ["rlib"]

[dependencies]
burn = { version = "0.21", features = ["tui", "train", "wgpu", "flex"], default-features = false}
burn-store = "0.21"
geo = "0.32"
imgal = { git = "https://github.com/imgal-sc/imgal", branch = "main" }
ndarray = "0.17"
rayon = "1.11"
reqwest = { version = "0.13", features = ["blocking"]}

[lints.clippy]
too_many_arguments = "allow"
