[package]
name = "cellcast_python"
version = "0.2.1"
authors = ["cellcast developers"]
edition = "2024"
license = "Unlicense OR MIT"
repository = "https://github.com/uw-loci/cellcast"
readme = "README.md"

[lib]
name = "cellcast"
crate-type = ["cdylib"]
doc = false

[dependencies]
cellcast = { path = "../cellcast" }
imgal = { git = "https://github.com/imgal-sc/imgal", branch = "main" }
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py37"] }
numpy = "0.27"

[lints.clippy]
too_many_arguments = "allow"
